Add the animation while scrolling

--- a/index.html
+++ b/index.html
@@ -166,12 +166,12 @@
           <p>VOUS POUVEZ Y ACCÉDER DEPUIS N'IMPORTE QUEL APPAREIL</p>
       </div>
       <div class="row align-items-center " >
-        <div class="col-lg-8 order-lg-last mb-3 mb-lg-0" >
+        <div class="col-lg-8 order-lg-last mb-3 mb-lg-0 animate-on-scroll" >
           <div class="image">
             <img class="img-fluid" src="images/MyScol-Photoshop-2-2048x1182.png.webp" alt="" />
           </div>
         </div>
-        <div class="col-lg-4 mb-4 text-center text-md-start order-lg-first" >
+        <div class="col-lg-4 mb-4 text-center text-md-start order-lg-first animate-on-scroll" >
           <div class="text">
             <h2>Connectez-vous en un clic depuis n'importe quel appareil !</h2>
             <p class="text-black-50 fs-6">
@@ -364,7 +364,7 @@
           <a href="#" class="card-link btn ">Abonnez Vous</a>
         </div>
       </div> 
-      <div class="card popular col-md-6 col-lg-4  " style="width: 18rem;">
+      <div class="card popular col-md-6 col-lg-4 animate-on-scroll " style="width: 18rem;">
         <div class="label">Most Popular</div>
         <div class="card-body ">
           <h3 class="card-title">PAck Advenced</h3>
