--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
                         <!-- Navbar Section -->
     <nav class="navbar navbar-expand-lg sticky-top d-flex bg-pink-200 ">
         <div class="container">
-                          <a class="navbar-brand " href="#home"><img src="images/Capture d’écran 2024-04-04 184346.png" class=" navbar-logo img-fluid"></a>
+          <a class="navbar-brand fs-4" href="#"><i class="fa-solid fa-globe fa-lg"></i> <span class="text-info">Smart</span>School</a>
                           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main" aria-controls="main" aria-expanded="false" aria-label="Toggle navigation">
                             <i class="fa-solid fa-bars"></i>
                           </button>
