--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
                             <i class="fa-solid fa-location-dot fs-2 text-primary"></i>
                             <div class="info-text mt-4 ms-3 text-start  ">
                                 <h6 class="fw-bold">Adresse:</h6>
-                                <p class="fw-bold"> Kenitra, Morocco</p>
+                                <p class="fw-bold"> 218, Bloc G1 Ouled Oujih KENITRA</p>
                             </div>
                         </div>
                         
