--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
                     <h2 class="badge rounded-pill text-bg-primary p-3 fs-5">Nos coordonnées</h2>
                          <h2 class="text-primary">Prendre contact</h2>
                 </div>
-                <div class="row">
+                <div class="row border">
                     <div class="col-12 col-md-4">
                         <div class="contact-info d-flex align-items-center ">
                             <i class="fa-solid fa-location-dot fs-2 text-primary"></i>
@@ -102,7 +102,7 @@
                 </div>
                 <!-- formulaire  -->
               
-                <div class="title mt-5 mb-5 position-relative">
+                <div class="title mt-5 mb-5 position-relative border-bottom">
                   <h2 class=" text-center text-primary fs-1 fw-bold">Contactez l'équipe LilianaDev</h2>
                   <h6 class="mt-4">Veuillez remplir le formulaire de contact ci-dessous</h6>
               </div>
@@ -160,79 +160,128 @@
          </div>
          </div>
          <!-- footer  -->
-         <div class="footer pt-5 pb-5 text-white-50 text-center text-md-start" id="about">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-lg-4">
-        <div class="info mb-5">
-          <img src="images/Capture d’écran 2024-04-04 184346.png" alt="" class=" mb-4 img-fluid w-50" />
-          <p class="mb-5">
-            Pellentesque in ipsum id orci porta dapibus. Vivamus magna justo, lacinia eget consectetur sed,
-            convallis at tellus.
-          </p>
-          <div class="copyright">
-            Created By <span class="text-uppercase">online institut</span>
-            <div>&copy; 2024 - <span>LILIANADEV Inc</span></div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6 col-lg-2">
-        <div class="links">
-          <h5 class="text-light">Links</h5>
-          <ul class="list-unstyled lh-lg">
-            <li>ACCUEIL</li>
-            <li>FONCTIONNALITÉS</li>
-            <li>SERVICES</li>
-            <li>Demo</li>
-            <li>Support</li>
-            <li>Terms and Condition</li>
-          </ul>
-        </div>
-      </div>
-      <div class="col-md-6 col-lg-2">
-        <div class="links">
-          <h5 class="text-light">About Us</h5>
-          <ul class="list-unstyled lh-lg">
-            <li>Sign In</li>
-            <li>Register</li>
-            <li>About Us</li>
-            <li>Blog</li>
-            <li>Contact Us</li>
-          </ul>
-        </div>
-      </div>
-      <div class="col-md-6 col-lg-4">
-        <div class="contact">
-          <h5 class="text-light">Contact Us</h5>
-          <p class="lh-lg mt-3 mb-5">Get in touch with us via mail phone.We are waiting for your call or message</p>
-          <a class="btn rounded-pill main-btn w-100" href="#">onlineinstitut23@gmail.com</a>
-          <ul class="d-flex justify-content-center justify-content-md-start mt-5 list-unstyled gap-3 ">
-            <li>
-              <a class="d-block text-light" href="https://www.facebook.com/" target="_blank"
-                ><i class="fa-brands fa-facebook fa-lg facebook rounded-circle p-2"></i
-              ></a>
-            </li>
-            <li>
-              <a class="d-block text-light" href="https://twitter.com/" target="_blank"
-                ><i class="fa-brands fa-x-twitter fa-lg twitter rounded-circle p-2"></i
-              ></a>
-            </li>
-            <li>
-              <a class="d-block text-light" href="https://www.linkedin.com/" target="_blank"
-                ><i class="fa-brands fa-linkedin fa-lg linkedin rounded-circle p-2"></i
-              ></a>
-            </li>
-            <li>
-              <a class="d-block text-light" href="https://www.youtube.com/" target="_blank"
-                ><i class="fa-brands fa-youtube fa-lg youtube rounded-circle p-2"></i
-              ></a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+         <div
+         class="footer pt-5 pb-5 text-white-50 text-center text-md-start"
+         id="about"
+       >
+         <div class="container">
+           <div class="row">
+             <div class="col-md-6 col-lg-4">
+               <div class="info mb-5">
+                 <img
+                   src="images/Capture d’écran 2024-04-04 184346.png"
+                   alt=""
+                   class="mb-4 img-fluid w-50"
+                 />
+                 <p class="mb-5">
+                   Pellentesque in ipsum id orci porta dapibus. Vivamus magna
+                   justo, lacinia eget consectetur sed, convallis at tellus.
+                 </p>
+                 <div class="copyright">
+                   Created By <span class="text-uppercase">online institut</span>
+                   <div>&copy; 2024 - <span>LILIANADEV Inc</span></div>
+                 </div>
+               </div>
+             </div>
+             <div class="col-md-6 col-lg-2">
+               <div class="links">
+                 <h5 class="text-light">Links</h5>
+                 <ul class="list-unstyled lh-lg">
+                   <li>ACCUEIL</li>
+                   <li>FONCTIONNALITÉS</li>
+                   <li>SERVICES</li>
+                   <li>Demo</li>
+                   <li>Support</li>
+                   <li>Terms and Condition</li>
+                 </ul>
+               </div>
+             </div>
+             <div class="col-md-6 col-lg-2">
+               <div class="about">
+                 <h5 class="text-light">About Us</h5>
+                 <ul class="list-unstyled lh-lg">
+                   <li>Sign In</li>
+                   <li>Register</li>
+                   <li>About Us</li>
+                   <li>Blog</li>
+                   <li>Contact Us</li>
+                 </ul>
+               </div >
+               <h2 class=" custom-h2 text-info " style="margin-top: 182px;">Location <i class="fa-solid fa-map-pin"></i></h2> 
+             </div>
+             <div class="col-md-6 col-lg-4">
+               <div class="row">
+                 <div class="col-md-6 col-lg-12 order-md-last">
+               <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3297.5052972735893!2d-6.621788124274563!3d34.26116487307906!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzTCsDE1JzQwLjIiTiA2wrAzNycwOS4yIlc!5e0!3m2!1sfr!2sma!4v1714088739372!5m2!1sfr!2sma" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+               </div>
+                 <div class="col-md-6 col-lg-12">
+               <div class="contact">
+                 <h5 class="text-light">Contact Us</h5>
+                 <p class="lh-lg mt-3 mb-5">
+                   Get in touch with us via mail phone.We are waiting for your call
+                   or message
+                 </p>
+                 <a class="btn rounded-pill main-btn w-100" href="#"
+                   >onlineinstitut23@gmail.com</a
+                 >
+                 <ul
+                   class="d-flex justify-content-center justify-content-md-start mt-5 list-unstyled gap-3"
+                 >
+                   <li>
+                     <a
+                       class="d-block text-light"
+                       href="https://www.facebook.com/"
+                       target="_blank"
+                       ><i
+                         class="fa-brands fa-facebook fa-lg facebook rounded-circle p-2"
+                       ></i
+                     ></a>
+                   </li>
+                   <li>
+                     <a
+                       class="d-block text-light"
+                       href="https://twitter.com/"
+                       target="_blank"
+                       ><i
+                         class="fa-brands fa-x-twitter fa-lg twitter rounded-circle p-2"
+                       ></i
+                     ></a>
+                   </li>
+                   <li>
+                     <a
+                       class="d-block text-light"
+                       href="https://www.linkedin.com/"
+                       target="_blank"
+                       ><i
+                         class="fa-brands fa-linkedin fa-lg linkedin rounded-circle p-2"
+                       ></i
+                     ></a>
+                   </li>
+                   <li>
+                     <a
+                       class="d-block text-light"
+                       href="https://www.youtube.com/"
+                       target="_blank"
+                       ><i
+                         class="fa-brands fa-youtube fa-lg youtube rounded-circle p-2"
+                       ></i
+                     ></a>
+                   </li>
+                 </ul>
+               </div>
+             </div>
+             
+             </div>
+             </div>
+   
+           </div>
+         </div>
+       </div>
+       <p
+         class="copyright bg-pink-500 text-info fw-bold d-flex justify-content-center align-items-center mb-0 p-3"
+       >
+         © 2024 LilianaDev. All rights reserved
+       </p>
     <script>
         var nav=document.querySelector("nav");
         window.addEventListener('scroll',function(){
