--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,10 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet"
     />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
   </head>
   <body>
     <!-- scrool Button  -->
@@ -29,7 +33,7 @@
       <i class="fab fa-whatsapp"></i>
     </a>
     <!-- Navbar Section -->
-    <nav class="navbar navbar-expand-lg sticky-top d-flex bg-pink-200">
+    <nav class="navbar navbar-expand-lg sticky-top d-flex bg-dark"  data-bs-theme="dark">
       <div class="container">
         <a class="navbar-brand fs-4" href="#"
           ><i class="fa-solid fa-globe fa-lg"></i>
@@ -57,15 +61,15 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link p-2 p-lg-3" href="#about">About</a>
+              <a class="nav-link p-2 p-lg-3 active" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link p-2 p-lg-3" href="demo.html">Démo Gratuit</a>
+              <a class="nav-link p-2 p-lg-3 active" href="demo.html">Démo Gratuit</a>
             </li>
             <div class="icons-social d-flex gap-2">
               <li class="nav-item">
                 <a
-                  class="nav-link p-2 p-lg-3"
+                  class="nav-link p-2 p-lg-3 active"
                   href="https://www.linkedin.com/"
                   target="_blank"
                   ><i class="fa-brands fa-linkedin-in"></i
@@ -73,7 +77,7 @@
               </li>
               <li class="nav-item">
                 <a
-                  class="nav-link p-2 p-lg-3"
+                  class="nav-link p-2 p-lg-3 active"
                   href="https://twitter.com/"
                   target="_blank"
                   ><i class="fa-brands fa-x-twitter"></i
@@ -81,7 +85,7 @@
               </li>
               <li class="nav-item">
                 <a
-                  class="nav-link p-2 p-lg-3"
+                  class="nav-link p-2 p-lg-3 active"
                   href="https://www.facebook.com/"
                   target="_blank"
                   ><i class="fa-brands fa-facebook-f"></i
@@ -89,7 +93,7 @@
               </li>
               <li class="nav-item">
                 <a
-                  class="nav-link p-2 p-lg-3"
+                  class="nav-link p-2 p-lg-3 active"
                   href="https://www.instagram.com/"
                   target="_blank"
                   ><i class="fa-brands fa-instagram"></i
@@ -102,15 +106,15 @@
     </nav>
     <!-- Contact body  -->
 
-    <div class="contact text-center pt-5 pb-5 bg-primary-emphasis">
+    <div class="contact text-center pt-5 pb-5 bg-light">
       <div class="container">
         <div class="title mt-5 mb-5 position-relative">
           <h2 class="badge rounded-pill text-bg-primary p-3 fs-5">
             Nos coordonnées
           </h2>
-          <h2 class="text-primary">Prendre contact</h2>
+          <h2 class="text-primary ">Prendre contact</h2>
         </div>
-        <div class="row border">
+        <div class="row ">
           <div class="col-12 col-md-4">
             <div class="contact-info d-flex align-items-center">
               <i class="fa-solid fa-location-dot fs-2 text-primary"></i>
@@ -141,7 +145,7 @@
         </div>
         <!-- formulaire  -->
 
-        <div class="title mt-5 mb-5 position-relative border-bottom">
+        <div class="title mt-5 mb-5 position-relative border-bottom border-info">
           <h2 class="text-center text-primary fs-1 fw-bold">
             Contactez l'équipe LilianaDev
           </h2>
@@ -150,14 +154,14 @@
           </h6>
         </div>
         <div class="contacter text-center text-md-start pt-5 pb-5">
-          <form class="row g-5">
-            <div class="col-12 col-md-6">
-              <label for="nom" class="form-label"
+          <form class="row g-5 " id="contact-us">
+            <div class="col-12 col-md-6 ">
+              <label for="nom" class="form-label "
                 >Nom<span class="text-danger">*</span></label
               >
               <input
                 type="text"
-                class="form-control"
+                class="form-control border border-info"
                 id="nom"
                 placeholder="Entrer votre nom "
               />
@@ -168,7 +172,7 @@
               >
               <input
                 type="text"
-                class="form-control"
+                class="form-control border border-info"
                 id="prenom"
                 placeholder="Entrer votre prénom"
               />
@@ -179,7 +183,7 @@
               >
               <input
                 type="email"
-                class="form-control"
+                class="form-control border border-info"
                 id="email"
                 placeholder="Entrer votre email"
               />
@@ -191,7 +195,7 @@
               >
               <input
                 type="tel"
-                class="form-control"
+                class="form-control border border-info"
                 id="tel"
                 placeholder="062512..."
               />
@@ -204,7 +208,7 @@
               >
               <input
                 type="text"
-                class="form-control"
+                class="form-control border border-info"
                 id="entreprise"
                 placeholder="Entre le nom de votre entreprise/établissement"
               />
@@ -213,7 +217,7 @@
               <label for="choisir" class="form-label"
                 >Sélectionner par lequel vous souhaitez nous contacter
               </label>
-              <select class="form-select" aria-label="Default select example">
+              <select class="form-select border border-info" aria-label="Default select example">
                 <option selected>-choisir-</option>
                 <option value="1">Whatsapp</option>
                 <option value="2">Email</option>
@@ -226,7 +230,7 @@
               >
               <input
                 type="text"
-                class="form-control"
+                class="form-control border border-info"
                 id="nom"
                 placeholder="Entrer l'objet de votre message "
               />
@@ -236,14 +240,14 @@
                 >Votre Message</label
               >
               <textarea
-                class="form-control"
+                class="form-control border border-info"
                 id="exampleFormControlTextarea1"
                 rows="5"
                 placeholder="Entrer votre message"
               ></textarea>
             </div>
             <div class="d-grid">
-              <button class="btn btn-primary" type="button">
+              <button class="btn btn-primary" type="submit">
                 Envoyez maintenant
               </button>
             </div>
@@ -253,7 +257,7 @@
     </div>
     <!-- footer  -->
     <div
-      class="footer pt-5 pb-5 text-white-50 text-center text-md-start"
+      class="footer pt-5 pb-5 text-white-50 bg-dark text-center text-md-start"
       id="about"
     >
       <div class="container">
@@ -261,10 +265,10 @@
           <div class="col-md-6 col-lg-4">
             <div class="info mb-5">
               <img
-                src="images/Capture d’écran 2024-04-04 184346.png"
-                alt=""
-                class="mb-4 img-fluid w-50"
-              />
+              src="images/logo png.png"
+              alt=""
+              class=" w-50 h-50"
+            />
               <p class="mb-5">
                 Pellentesque in ipsum id orci porta dapibus. Vivamus magna
                 justo, lacinia eget consectetur sed, convallis at tellus.
@@ -299,7 +303,7 @@
                 <li>Contact Us</li>
               </ul>
             </div>
-            <h2 class="custom-h2 text-info" style="margin-top: 182px">
+            <h2 class="custom-h2 text-light text-uppercase" style="margin-top: 182px">
               Location <i class="fa-solid fa-map-pin"></i>
             </h2>
           </div>
@@ -378,19 +382,11 @@
       </div>
     </div>
     <p
-      class="copyright bg-pink-500 text-info fw-bold d-flex justify-content-center align-items-center mb-0 p-3"
+      class="copyright bg-dark bg-gradient text-info d-flex justify-content-center align-items-center mb-0 p-3"
     >
       © 2024 LilianaDev. All rights reserved
     </p>
     <script>
-      var nav = document.querySelector("nav");
-      window.addEventListener("scroll", function () {
-        if (window.pageYOffset > 100) {
-          nav.classList.add("bg-light", "shadow");
-        } else {
-          nav.classList.remove("bg-light", "shadow");
-        }
-      });
       function scrollToTop() {
         window.scrollTo({
           top: 0,
@@ -401,7 +397,7 @@
         scrollFunction();
       };
 
-      function scrollFunction() {
+   function scrollFunction() {
         if (
           document.body.scrollTop > 20 ||
           document.documentElement.scrollTop > 20
@@ -411,6 +407,9 @@
           document.getElementById("btnScrollToTop").style.display = "none";
         }
       }
+
+
+      
     </script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/all.min.js"></script>
