--- a/demo.html
+++ b/demo.html
@@ -31,7 +31,7 @@
     <!-- Navbar Section -->
     <nav class="navbar navbar-expand-lg sticky-top d-flex bg-dark" data-bs-theme="dark">
       <div class="container">
-        <a class="navbar-brand fs-4" href="#"
+        <a class="navbar-brand fs-4" href="index.html"
           ><i class="fa-solid fa-globe fa-lg"></i>
           <span class="text-info">Smart</span>School</a
         >
